# civicc-skeleton

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  configure.sh
cmake/Modules/: FindARGP.cmake  FindArgp.cmake
scripts/: dist.sh
src/: main.c  main.ccn  user_types.h
src/demo/: opt_sub.c  rename_identifiers.c  sum_ints.c
src/global/: globals.c  globals.h
src/print/: print.c
src/scanparse/: lexer.l  parser.y  scanParse.c
test/: INFO.md  run.bash  test1.txt  test2.cvc
